--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-black py-12 text-white text-opacity-80">
+<footer class="bg-black py-12 text-white text-opacity-80 px-14">
   <div class="max-w-7xl mx-auto flex gap-10 justify-between">
     <div class="flex flex-col gap-5">
       <div>
