--- a/src/app/components/home/header/header.component.html
+++ b/src/app/components/home/header/header.component.html
@@ -2,8 +2,8 @@
   id="header-section"
   class="h-[100vh] w-full bg-black bg-[url('assets/images/image1.png')] bg-cover bg-fixed text-white"
 >
-  <img [src]="lowerImage" class="absolute bottom-0 left-0 select-none" />
-  <img [src]="upperImage" class="absolute top-0 right-0 select-none" />
+  <img [src]="lowerImage" class="absolute bottom-0 left-0 select-none" width="270" />
+  <img [src]="upperImage" class="absolute top-0 right-0 select-none" width="270" />
   <div
     class="flex flex-col items-center justify-center h-full text-center mx-auto p-10 max-w-5xl gap-10"
   >
