--- a/src/app/components/home/testimonials/testimonials.component.html
+++ b/src/app/components/home/testimonials/testimonials.component.html
@@ -1,6 +1,6 @@
 <section
   id="principles-section"
-  class="text-white bg-black py-24 bg-cover w-full"
+  class="text-white bg-black py-24 bg-cover w-full px-20"
   [ngStyle]="{ 'background-image': 'url(' + bg + ')' }"
 >
   <div class="max-w-7xl mx-auto flex gap-24 items-center">
