--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="bg-black text-white flex items-center p-6 px-12 justify-between border-b-primary border-b-4 border-opacity-15 fixed w-full z-50 top-0"
+  class="bg-black text-white flex items-center p-6 px-12 justify-between border-b-primary border-b-[3px] border-opacity-15 fixed w-full z-50 top-0"
 >
   <div>
     <a routerLink="/">
