--- a/src/app/components/home/contact-us/contact-us.component.html
+++ b/src/app/components/home/contact-us/contact-us.component.html
@@ -1,8 +1,5 @@
-<section id="contact-us-section" class="py-16">
-  <h1 class="text-primary text-4xl font-semibold mb-10 text-center">
-    Reach out to us
-  </h1>
-  <div class="max-w-6xl mx-auto flex gap-20">
+<section id="contact-us-section" class="py-16 px-20">
+  <div class="max-w-[75rem] mx-auto flex gap-20 items-center">
     <div class="flex flex-col gap-4">
       <div class="flex items-center gap-2.5 whitespace-nowrap">
         <fa-icon [icon]="faPhone" class="text-primary"></fa-icon>
@@ -33,6 +30,7 @@
       </div>
     </div>
     <div class="w-full">
+      <h1 class="text-primary text-4xl font-semibold mb-10">Reach out to us</h1>
       <div class="flex gap-10">
         <form class="flex flex-col gap-4 w-full">
           <input
