--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <app-brands></app-brands>
-<section id="about-section" class="max-w-7xl mx-auto py-10">
+<div class="px-20">
+  <section id="about-section" class="max-w-7xl mx-auto py-10">
   <div class="grid grid-cols-2 gap-10 place-items-center place-content-center">
     <div class="flex gap-5">
       <div class="flex flex-col items-center py-2">
@@ -38,10 +39,11 @@
     </div>
   </div>
 </section>
+</div>
 
 <section
   id="principles-section"
-  class="text-white bg-black py-24 bg-cover"
+  class="text-white bg-black py-24 bg-cover px-20"
   [ngStyle]="{ 'background-image': 'url(' + bg + ')' }"
 >
   <div class="max-w-7xl mx-auto flex gap-20 items-center">
