--- a/src/app/components/home/contact-us/contact-us.component.html
+++ b/src/app/components/home/contact-us/contact-us.component.html
@@ -1,17 +1,19 @@
 <section id="contact-us-section" class="py-16 px-20">
+  <h1 class="text-primary text-4xl font-semibold mb-10 text-center">Reach out to us</h1>
   <div class="max-w-[75rem] mx-auto flex gap-20 items-center">
     <div class="flex flex-col gap-4">
       <div class="flex items-center gap-2.5 whitespace-nowrap">
         <fa-icon [icon]="faPhone" class="text-primary"></fa-icon>
         <p>
-          If you have an urgent business concern, please contact us at +250 788
-          309 463
+          If you have an urgent business concern,<br />please contact us at +250
+          788 309 463
         </p>
       </div>
       <div class="flex items-center gap-2.5 whitespace-nowrap">
         <fa-icon [icon]="faBell" class="text-primary"></fa-icon>
         <p>
-          Be the first to hear about new releases, announcements, and updates.
+          Be the first to hear about new releases,<br />announcements, and
+          updates.
         </p>
       </div>
       <h2 class="font-semibold text-lg">Location</h2>
@@ -30,7 +32,6 @@
       </div>
     </div>
     <div class="w-full">
-      <h1 class="text-primary text-4xl font-semibold mb-10">Reach out to us</h1>
       <div class="flex gap-10">
         <form class="flex flex-col gap-4 w-full">
           <input
