--- a/src/app/components/home/contact-us/contact-us.component.html
+++ b/src/app/components/home/contact-us/contact-us.component.html
@@ -1,7 +1,9 @@
 <section id="contact-us-section" class="py-16 px-20">
-  <h1 class="text-primary text-4xl font-semibold mb-10 text-center">Reach out to us</h1>
-  <div class="max-w-[75rem] mx-auto flex gap-20 items-center">
-    <div class="flex flex-col gap-4">
+  <h1 class="text-primary text-4xl font-semibold mb-10 text-center">
+    Reach out to us
+  </h1>
+  <div class="max-w-5xl mx-auto grid grid-cols-2 gap-20 items-center">
+    <div class="flex flex-col gap-4 items-start">
       <div class="flex items-center gap-2.5 whitespace-nowrap">
         <fa-icon [icon]="faPhone" class="text-primary"></fa-icon>
         <p>
@@ -46,7 +48,7 @@
           />
           <textarea
             class="p-2.5 bg-[#F6F6F6] outline-none rounded-lg px-4 resize-none"
-            rows="5"
+            rows="6"
             placeholder="Message"
           ></textarea>
           <div class="pt-2">
