--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,70 +2,76 @@
 <app-brands></app-brands>
 <div class="px-20">
   <section id="about-section" class="max-w-7xl mx-auto py-10">
-  <div class="grid grid-cols-2 gap-10 place-items-center place-content-center">
-    <div class="flex gap-5">
-      <div class="flex flex-col items-center py-2">
-        <div>
-          <div class="w-4 h-4 rounded-full border-2 border-primary"></div>
+    <div
+      class="grid grid-cols-2 gap-10 place-items-center place-content-center"
+    >
+      <div class="flex gap-5">
+        <div class="flex flex-col items-center py-2">
+          <div>
+            <div class="w-4 h-4 rounded-full border-2 border-primary"></div>
+          </div>
+          <div class="h-full bg-primary w-0.5"></div>
         </div>
-        <div class="h-full bg-primary w-0.5"></div>
+        <div>
+          <span class="text-primary">What We Do</span>
+          <h2 class="font-semibold text-3xl">
+            The Greatest Professionals Are Here To Help You Grow Your Company.
+          </h2>
+        </div>
       </div>
       <div>
-        <span class="text-primary">What We Do</span>
-        <h2 class="font-semibold text-3xl">
-          The Greatest Professionals Are Here To Help You Grow Your Company.
-        </h2>
+        <p class="text-textGrey">
+          With a strong online presence, our knowledgeable staff can greatly
+          assist you in growing your business. To improve your online
+          visibility, we will assist you in creating mobile-friendly websites,
+          iOS and Android apps, and cloud-based applications.
+        </p>
       </div>
     </div>
-    <div>
-      <p class="text-textGrey">
-        With a strong online presence, our knowledgeable staff can greatly
-        assist you in growing your business. To improve your online visibility,
-        we will assist you in creating mobile-friendly websites, iOS and Android
-        apps, and cloud-based applications.
-      </p>
+    <div class="grid grid-cols-3 gap-10 py-16">
+      <div
+        *ngFor="let service of services"
+        class="text-center flex flex-col items-center gap-4"
+      >
+        <img [src]="service.icon" alt="#" width="60" />
+        <h2 class="text-lg font-semibold">{{ service.title }}</h2>
+        <p class="text-textGrey">
+          {{ service.description }}
+        </p>
+      </div>
     </div>
-  </div>
-  <div class="grid grid-cols-3 gap-10 py-16">
-    <div
-      *ngFor="let service of services"
-      class="text-center flex flex-col items-center gap-4"
-    >
-      <img [src]="service.icon" alt="#" width="60" />
-      <h2 class="text-lg font-semibold">{{ service.title }}</h2>
-      <p class="text-textGrey">
-        {{ service.description }}
-      </p>
-    </div>
-  </div>
-</section>
+  </section>
 </div>
 
 <section
   id="principles-section"
-  class="text-white bg-black py-24 bg-cover px-20"
+  class="bg-black bg-cover"
   [ngStyle]="{ 'background-image': 'url(' + bg + ')' }"
 >
-  <div class="max-w-7xl mx-auto flex gap-20 items-center">
-    <div>
-      <h2 class="font-semibold text-3xl">We work by Creative Principles</h2>
-      <div class="pt-10">
-        <div
-          *ngFor="let item of principles"
-          class="flex gap-4 items-center py-4"
-        >
-          <div>
-            <img [src]="item.icon" width="60" alt="#" />
-          </div>
-          <div>
-            <h4 class="text-primary font-semibold text-lg">{{ item.title }}</h4>
-            <p>{{ item.description }}</p>
+  <div class="bg-black py-24  px-20 text-white bg-opacity-40">
+    <div class="max-w-7xl mx-auto grid grid-cols-2 gap-20 items-center">
+      <div>
+        <h2 class="font-semibold text-3xl">We work by Creative Principles</h2>
+        <div class="pt-10">
+          <div
+            *ngFor="let item of principles"
+            class="flex gap-4 items-center py-4"
+          >
+            <div>
+              <img [src]="item.icon" width="60" alt="#" />
+            </div>
+            <div>
+              <h4 class="text-primary font-semibold text-lg">
+                {{ item.title }}
+              </h4>
+              <p>{{ item.description }}</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div>
-      <img [src]="graphic" alt="#" />
+      <div>
+        <img [src]="graphic" alt="#" />
+      </div>
     </div>
   </div>
 </section>
