--- a/src/app/components/home/testimonials/testimonials.component.html
+++ b/src/app/components/home/testimonials/testimonials.component.html
@@ -1,70 +1,72 @@
 <section
   id="principles-section"
-  class="text-white bg-black py-24 bg-cover w-full px-20"
+  class="bg-black bg-cover"
   [ngStyle]="{ 'background-image': 'url(' + bg + ')' }"
 >
-  <div class="max-w-7xl mx-auto flex gap-24 items-center">
-    <div>
-      <div class="flex gap-5">
-        <div class="flex flex-col items-center py-2">
-          <div>
-            <div class="w-4 h-4 rounded-full border-2 border-primary"></div>
+  <div class="text-white bg-black py-24 bg-cover w-full px-20 bg-opacity-40">
+    <div class="max-w-7xl mx-auto flex gap-24 items-center">
+      <div>
+        <div class="flex gap-5">
+          <div class="flex flex-col items-center py-2">
+            <div>
+              <div class="w-4 h-4 rounded-full border-2 border-primary"></div>
+            </div>
+            <div class="h-full bg-primary w-0.5"></div>
           </div>
-          <div class="h-full bg-primary w-0.5"></div>
-        </div>
-        <div>
-          <span class="text-primary">TESTIMONIALS</span>
-          <h2 class="font-semibold text-3xl text-white whitespace-nowrap">
-            Real results from<br />Success Stories
-          </h2>
+          <div>
+            <span class="text-primary">TESTIMONIALS</span>
+            <h2 class="font-semibold text-3xl text-white whitespace-nowrap">
+              Real results from<br />Success Stories
+            </h2>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="w-full overflow-hidden">
-      <div class="flex w-full overflow-x-auto no-scrollbar gap-10">
-        <div
-          *ngFor="let item of [1, 2, 3]"
-          class="min-w-[600px] max-w-[600px] bg-[#1D2125] p-10 px-14 rounded-xl flex flex-col gap-8"
-        >
-          <div>
-            <div class="w-[92px] h-[86px] rounded-2xl overflow-hidden">
-              <img
-                src="https://cdn.pixabay.com/photo/2017/03/27/13/28/man-2178721_1280.jpg"
-                alt="#"
-                width="100"
-                class="w-full h-full object-cover"
-              />
+      <div class="w-full overflow-hidden">
+        <div class="flex w-full overflow-x-auto no-scrollbar gap-10">
+          <div
+            *ngFor="let item of [1, 2, 3]"
+            class="min-w-[600px] max-w-[600px] bg-[#1D2125] p-10 px-14 rounded-xl flex flex-col gap-8"
+          >
+            <div>
+              <div class="w-[92px] h-[86px] rounded-2xl overflow-hidden">
+                <img
+                  src="https://cdn.pixabay.com/photo/2017/03/27/13/28/man-2178721_1280.jpg"
+                  alt="#"
+                  width="100"
+                  class="w-full h-full object-cover"
+                />
+              </div>
+            </div>
+            <div class="relative inline-block">
+              <img [src]="quote" alt="#" class="absolute -top-1 -left-6" />
+              <p class="text-gray-300">
+                Tempora expedita et corporis assumenda enim unde molestias.
+                Doloribus doloribus modi consequatur et. Distinctio consequuntur
+                non doloremque. Praesentium deserunt eum vero. Omnis porro quae
+                cum iste voluptas ut accusamus ut et. Aut nam aut nulla.
+                <img
+                  [src]="quote"
+                  alt="#"
+                  class="inline-block transform rotate-180 absolute bottom-0 ml-2"
+                />
+              </p>
+            </div>
+
+            <div>
+              <p>Christian Mugiraneza</p>
+              <p class="text-textGrey">CEO MUFC</p>
             </div>
           </div>
-          <div class="relative inline-block">
-            <img [src]="quote" alt="#" class="absolute -top-1 -left-6" />
-            <p class="text-gray-300">
-              Tempora expedita et corporis assumenda enim unde molestias.
-              Doloribus doloribus modi consequatur et. Distinctio consequuntur
-              non doloremque. Praesentium deserunt eum vero. Omnis porro quae
-              cum iste voluptas ut accusamus ut et. Aut nam aut nulla.
-              <img
-                [src]="quote"
-                alt="#"
-                class="inline-block transform rotate-180 absolute bottom-0 ml-2"
-              />
-            </p>
-          </div>
-
-          <div>
-            <p>Christian Mugiraneza</p>
-            <p class="text-textGrey">CEO MUFC</p>
-          </div>
         </div>
-      </div>
 
-      <div class="flex gap-1.5 mt-5">
-        <div
-          *ngFor="let item of [1, 2, 3]"
-          class=" h-2.5  rounded-full {{
-            item == 1 ? 'w-[97px] bg-primary' : 'bg-[#D9D9D9] w-7'
-          }}"
-        ></div>
+        <div class="flex gap-1.5 mt-5">
+          <div
+            *ngFor="let item of [1, 2, 3]"
+            class=" h-2.5  rounded-full {{
+              item == 1 ? 'w-[97px] bg-primary' : 'bg-[#D9D9D9] w-7'
+            }}"
+          ></div>
+        </div>
       </div>
     </div>
   </div>
