--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<main class="hidden lg:block">
+<!-- <main class="hidden lg:block"> -->
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
-</main>
+<!-- </main>
 <main
   class="flex lg:hidden items-center flex-col justify-center p-10 h-[100vh] text-center gap-5"
 >
@@ -11,4 +11,4 @@
     Mobile Version is not yet available, please use your laptop to continue to
     this website.
   </p>
-</main>
+</main> -->
