--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,7 @@
-<footer class="bg-black py-12 text-white text-opacity-80 px-14">
-  <div class="max-w-7xl mx-auto flex gap-10 justify-between">
+<footer class="bg-black py-14 md:py-12 text-white text-opacity-80 px-14">
+  <div
+    class="max-w-7xl mx-auto grid sm:grid-cols-2 lg:flex gap-14 md:gap-10 justify-between"
+  >
     <div class="flex flex-col gap-5">
       <div>
         <a routerLink="/">
