--- a/src/app/components/home/brands/brands.component.html
+++ b/src/app/components/home/brands/brands.component.html
@@ -1,8 +1,8 @@
 <section class="brands-section p-10 text-center">
   <h4 class="uppercase font-semibold text-xl">Brands We have worked with</h4>
-  <div class="flex justify-center items-center gap-10 p-10">
+  <div class="grid grid-cols-2 md:flex justify-center items-center gap-10 p-10">
     <div *ngFor="let brand of brands">
-      <img [src]="brand" alt="#" />
+      <div><img [src]="brand" alt="#" /></div>
     </div>
   </div>
 </section>
