--- a/src/app/components/home/contact-us/contact-us.component.html
+++ b/src/app/components/home/contact-us/contact-us.component.html
@@ -1,8 +1,10 @@
-<section id="contact-us-section" class="py-16 px-20">
+<section id="contact-us-section" class="py-16 px-14 md:px-20">
   <h1 class="text-primary text-4xl font-semibold mb-10 text-center">
     Reach out to us
   </h1>
-  <div class="max-w-5xl mx-auto grid grid-cols-2 gap-20 items-center">
+  <div
+    class="max-w-5xl mx-auto flex flex-col-reverse md:grid md:grid-cols-2 gap-20 items-center"
+  >
     <div class="flex flex-col gap-4 items-start">
       <div class="flex items-center gap-2.5 whitespace-nowrap">
         <fa-icon [icon]="faPhone" class="text-primary"></fa-icon>
@@ -34,7 +36,7 @@
       </div>
     </div>
     <div class="w-full">
-      <div class="flex gap-10">
+      <div class="flex flex-col md:flex-row gap-10">
         <form class="flex flex-col gap-4 w-full">
           <input
             type="text"
@@ -60,20 +62,30 @@
             </button>
           </div>
         </form>
-        <div class="flex flex-col gap-1">
-          <div class="flex flex-col items-center py-2 h-[99px]">
+        <div class="flex md:flex-col gap-1">
+          <div
+            class="flex md:flex-col flex-row-reverse items-center py-2 w-full md:w-auto md:h-[99px]"
+          >
             <div>
               <div class="w-4 h-4 rounded-full border-2 border-primary"></div>
             </div>
-            <div class="h-full bg-primary w-0.5"></div>
+            <div class="md:h-full w-full h-0.5 bg-primary md:w-0.5"></div>
           </div>
-          <div class="flex flex-col gap-1 items-center">
+          <div class="flex md:flex-col gap-1 items-center">
             <div
               *ngFor="let item of socialMedias"
               class="bg-black text-white p-1 rounded-full w-8 h-8 flex items-center justify-center"
             >
               <fa-icon [icon]="item.icon"></fa-icon>
             </div>
+          </div>
+          <div
+            class="flex md:hidden items-center py-2 w-full md:w-auto md:h-[99px]"
+          >
+            <div>
+              <div class="w-4 h-4 rounded-full border-2 border-primary"></div>
+            </div>
+            <div class="md:h-full w-full h-0.5 bg-primary md:w-0.5"></div>
           </div>
         </div>
       </div>
