--- a/src/app/components/home/products/products.component.html
+++ b/src/app/components/home/products/products.component.html
@@ -1,7 +1,7 @@
-<div class="px-20">
+<div class="px-10 md:px-20">
   <section id="products-section" class="max-w-7xl mx-auto py-20">
     <div
-      class="grid grid-cols-2 gap-10 place-items-center place-content-center"
+      class="grid md:grid-cols-2 gap-10 place-items-center place-content-center"
     >
       <div class="flex gap-5">
         <div class="flex flex-col items-center py-2">
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="w-full">
-        <div class="flex justify-between gap-10">
+        <div class="flex justify-between gap-2 md:gap-10">
           <button
             *ngFor="let category of categories"
             class=" p-3 px-4 rounded-lg w-full  {{
@@ -33,9 +33,9 @@
         </div>
       </div>
     </div>
-    <div class="grid grid-cols-3 gap-16 py-14">
+    <div class="grid md:grid-cols-3 gap-8 md:gap-16 py-14">
       <div *ngFor="let product of [1, 2, 3]" class="flex flex-col gap-3">
-        <div class="rounded-lg overflow-hidden w-full h-96">
+        <div class="rounded-lg overflow-hidden w-full md:h-96">
           <img
             src="https://cdn.pixabay.com/photo/2016/12/03/15/44/fireworks-1880045_1280.jpg"
             alt="#"
@@ -48,7 +48,7 @@
         </div>
       </div>
     </div>
-    <div class="flex justify-end">
+    <div class="flex justify-center md:justify-end">
       <button
         class="p-2.5 px-16 rounded-lg bg-primary text-white flex gap-4 items-center"
       >
@@ -56,8 +56,8 @@
         <fa-icon [icon]="faChevron"></fa-icon>
       </button>
     </div>
-    <div class="flex gap-8 my-10 mt-20">
-      <div class="flex gap-8 justify-between w-full">
+    <div class="flex gap-5 md:gap-8 my-10 mt-20">
+        <div class="flex flex-col md:flex-row gap-8 justify-between w-full">
         <div
           *ngFor="let item of firstRow"
           class="flex p-4 px-8 w-full rounded-lg items-center gap-4 bg-[#FAFAFA]"
@@ -78,14 +78,14 @@
         <div class="h-full bg-primary w-0.5"></div>
       </div>
     </div>
-    <div class="flex gap-8 mt-10">
+    <div class="flex gap-5 md:gap-8 mt-10">
       <div class="flex flex-col items-center">
         <div class="h-full bg-primary w-0.5"></div>
         <div>
           <div class="w-4 h-4 rounded-full border-2 border-primary"></div>
         </div>
       </div>
-      <div class="flex gap-8 justify-between w-full">
+      <div class="flex flex-col md:flex-row gap-8 justify-between w-full">
         <div
           *ngFor="let item of secondRow"
           class="flex p-4 px-8 w-full rounded-lg items-center gap-4 bg-[#FAFAFA]"
