--- a/src/app/components/home/testimonials/testimonials.component.html
+++ b/src/app/components/home/testimonials/testimonials.component.html
@@ -3,8 +3,10 @@
   class="bg-black bg-cover"
   [ngStyle]="{ 'background-image': 'url(' + bg + ')' }"
 >
-  <div class="text-white bg-black py-24 bg-cover w-full px-20 bg-opacity-40">
-    <div class="max-w-7xl mx-auto flex gap-24 items-center">
+  <div
+    class="text-white bg-black p-10 py-14 md:py-24 bg-cover w-full md:px-20 bg-opacity-40"
+  >
+    <div class="max-w-7xl mx-auto grid md:flex gap-12 md:gap-24 items-center">
       <div>
         <div class="flex gap-5">
           <div class="flex flex-col items-center py-2">
@@ -22,10 +24,10 @@
         </div>
       </div>
       <div class="w-full overflow-hidden">
-        <div class="flex w-full overflow-x-auto no-scrollbar gap-10">
+        <div class="flex w-full overflow-x-auto no-scrollbar gap-5 md:gap-10">
           <div
             *ngFor="let item of [1, 2, 3]"
-            class="min-w-[600px] max-w-[600px] bg-[#1D2125] p-10 px-14 rounded-xl flex flex-col gap-8"
+            class="md:min-w-[600px] md:max-w-[600px] min-w-[300px] max-w-[300px] bg-[#1D2125] p-8 md:p-10 md:px-14 rounded-xl flex flex-col gap-6 md:gap-8"
           >
             <div>
               <div class="w-[92px] h-[86px] rounded-2xl overflow-hidden">
@@ -59,11 +61,13 @@
           </div>
         </div>
 
-        <div class="flex gap-1.5 mt-5">
+        <div class="flex gap-1.5 mt-5 justify-start">
           <div
             *ngFor="let item of [1, 2, 3]"
-            class=" h-2.5  rounded-full {{
-              item == 1 ? 'w-[97px] bg-primary' : 'bg-[#D9D9D9] w-7'
+            class="h-1.5 md:h-2.5  rounded-full {{
+              item == 1
+                ? 'w-[60px] md:w-[97px] bg-primary'
+                : 'bg-[#D9D9D9] w-5 md:w-7'
             }}"
           ></div>
         </div>
