feat: about and oue work pages

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -10,6 +10,7 @@
             width="150"
             class="transition-all duration-300 hover:scale-110"
             alt="URUTI_LOGO"
+            loading="lazy"
           />
         </a>
       </div>
@@ -46,6 +47,7 @@
             width="200"
             height="200"
             class="w-full h-full object-cover hover:scale-125"
+            loading="lazy"
           />
         </a>
       </div>
