--- a/src/app/components/home/contact-us/contact-us.component.html
+++ b/src/app/components/home/contact-us/contact-us.component.html
@@ -1,4 +1,4 @@
-<section id="contact-us-section" class="py-16 px-14 md:px-20">
+<section id="contact-us" class="py-16 px-14 md:px-20">
   <h1 class="text-primary text-4xl font-semibold mb-10 text-center">
     Reach out to us
   </h1>
