--- a/src/app/components/home/testimonials/testimonials.component.html
+++ b/src/app/components/home/testimonials/testimonials.component.html
@@ -1,5 +1,5 @@
 <section
-  id="principles-section"
+  id="testimonials"
   class="bg-black bg-cover"
   [ngStyle]="{ 'background-image': 'url(' + bg + ')' }"
 >
