--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,8 +21,14 @@
       >
     </li>
     <li>
+      <a routerLink="/" class="hover:opacity-70" fragment="testimonials"
+        >Testimonials</a
+      >
+    </li>
+    <li>
       <a
         routerLink="/"
+        fragment="contact-us"
         class="bg-primary p-3 rounded-lg px-5 hover:bg-white hover:text-primary whitespace-nowrap"
         >Reach to us</a
       >
@@ -43,6 +49,13 @@
       </a>
       <a
         routerLink="/"
+        class="p-1.5 px-6 rounded uppercase transition-all duration-300 text-primary"
+        fragment="testimonials"
+        >Testimonials</a
+      >
+      <a
+        routerLink="/"
+        fragment="contact-us"
         class="bg-primary p-3 rounded-lg px-5 hover:bg-white hover:text-primary"
         >Reach to us</a
       >
