--- a/src/app/components/home/products/products.component.html
+++ b/src/app/components/home/products/products.component.html
@@ -49,15 +49,16 @@
       </div>
     </div>
     <div class="flex justify-center md:justify-end">
-      <button
+      <a
+        routerLink="/portfolio"
         class="p-2.5 px-16 rounded-lg bg-primary text-white flex gap-4 items-center"
       >
         <span>Discover More</span>
         <fa-icon [icon]="faChevron"></fa-icon>
-      </button>
+      </a>
     </div>
     <div class="flex gap-5 md:gap-8 my-10 mt-20">
-        <div class="flex flex-col md:flex-row gap-8 justify-between w-full">
+      <div class="flex flex-col md:flex-row gap-8 justify-between w-full">
         <div
           *ngFor="let item of firstRow"
           class="flex p-4 px-8 w-full rounded-lg items-center gap-4 bg-[#FAFAFA]"
