--- a/src/app/components/home/contact-us/contact-us.component.html
+++ b/src/app/components/home/contact-us/contact-us.component.html
@@ -31,6 +31,7 @@
             [src]="mapPhoto"
             alt="#"
             class="hover:opacity-90 hover:scale-125 duration-300 w-full h-full object-cover"
+            loading="lazy"
           />
         </a>
       </div>
