--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,6 +8,7 @@
         width="150"
         class="transition-all duration-300 hover:scale-110"
         alt="URUTI_LOGO"
+        loading="lazy"
       />
     </a>
   </div>
