added team menu

--- a/src/app/components/about/about-us/about-us.component.html
+++ b/src/app/components/about/about-us/about-us.component.html
@@ -128,7 +128,7 @@
         <img [src]="urutihub" width="500" loading="lazy" />
       </div>
     </div>
-    <div>
+    <div id="team">
       <h1 class="font-semibold text-3xl mt-20">Meet The Team</h1>
       <div class="grid md:grid-cols-4 gap-6 gap-y-10 my-10 px-1">
         <div *ngFor="let item of team" class="" id="{{ item.name }}">
