--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -22,10 +22,14 @@
       >
     </li>
     <li>
+      <a routerLink="about" class="hover:opacity-70" fragment="team">Team</a>
+    </li>
+    <li>
       <a routerLink="/" class="hover:opacity-70" fragment="testimonials"
         >Testimonials</a
       >
     </li>
+
     <li>
       <a
         routerLink="/"
@@ -53,6 +57,12 @@
         class="p-1.5 px-6 rounded uppercase transition-all duration-300 text-primary"
         fragment="testimonials"
         >Testimonials</a
+      >
+      <a
+        routerLink="about"
+        class="p-1.5 px-6 rounded uppercase transition-all duration-300 text-primary"
+        fragment="team"
+        >Team</a
       >
       <a
         routerLink="/"
