feat: add chatbot component with messaging functionality and integrate with backend API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+<app-chatbot></app-chatbot>
 <!-- </main>
 <main
   class="flex lg:hidden items-center flex-col justify-center p-10 h-[100vh] text-center gap-5"
